--- a/autoapi/quvac/field/model/index.html
+++ b/autoapi/quvac/field/model/index.html
@@ -351,6 +351,24 @@ as a new signature of quantum vacuum nonlinearity.” NJP 15.8 (2013):
 </li>
 </ul>
 </dd>
+<dt>For ‘gauss-modulated’:</dt><dd><ul>
+<li><dl class="simple">
+<dt>’w0’<span class="classifier">float</span></dt><dd><p>Waist size.</p>
+</dd>
+</dl>
+</li>
+<li><dl class="simple">
+<dt>’lam’: float</dt><dd><p>Wavelength of modulation.</p>
+</dd>
+</dl>
+</li>
+<li><dl class="simple">
+<dt>’phase0’: float, optional</dt><dd><p>Initial phase</p>
+</dd>
+</dl>
+</li>
+</ul>
+</dd>
 </dl>
 </dd>
 </dl>
