--- a/_modules/quvac/field/model.html
+++ b/_modules/quvac/field/model.html
@@ -319,6 +319,13 @@
 <span class="sd">                For &#39;gauss&#39;:</span>
 <span class="sd">                    - &#39;w0&#39; : float</span>
 <span class="sd">                        Waist size.</span>
+<span class="sd">                For &#39;gauss-modulated&#39;:</span>
+<span class="sd">                    - &#39;w0&#39; : float</span>
+<span class="sd">                        Waist size.</span>
+<span class="sd">                    - &#39;lam&#39;: float</span>
+<span class="sd">                        Wavelength of modulation.</span>
+<span class="sd">                    - &#39;phase0&#39;: float, optional</span>
+<span class="sd">                        Initial phase</span>
 <span class="sd">    grid : quvac.grid.GridXYZ</span>
 <span class="sd">        Spatial and grid.</span>
 <span class="sd">    &quot;&quot;&quot;</span>
@@ -359,7 +366,11 @@
 <span class="sd">        &quot;&quot;&quot;</span>
         <span class="k">match</span> <span class="bp">self</span><span class="o">.</span><span class="n">envelope_type</span><span class="p">:</span>
             <span class="k">case</span> <span class="s2">&quot;gauss&quot;</span><span class="p">:</span>
-                <span class="bp">self</span><span class="o">.</span><span class="n">envelope</span> <span class="o">=</span> <span class="s2">&quot;exp(-(2*z/w0)**2)&quot;</span>
+                <span class="bp">self</span><span class="o">.</span><span class="n">envelope</span> <span class="o">=</span> <span class="s2">&quot;exp(-(z/w0)**2)&quot;</span>
+            <span class="k">case</span> <span class="s2">&quot;gauss-modulated&quot;</span><span class="p">:</span>
+                <span class="bp">self</span><span class="o">.</span><span class="n">phase0</span> <span class="o">=</span> <span class="nb">getattr</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="s2">&quot;phase0&quot;</span><span class="p">,</span> <span class="mf">0.</span><span class="p">)</span>
+                <span class="bp">self</span><span class="o">.</span><span class="n">kz_m</span> <span class="o">=</span> <span class="mi">2</span><span class="o">*</span><span class="n">pi</span><span class="o">/</span><span class="bp">self</span><span class="o">.</span><span class="n">lam</span>
+                <span class="bp">self</span><span class="o">.</span><span class="n">envelope</span> <span class="o">=</span> <span class="s2">&quot;exp(-(z/w0)**2) * cos(kz_m*z + phase0)&quot;</span>
             <span class="k">case</span><span class="w"> </span><span class="k">_</span><span class="p">:</span>
                 <span class="k">raise</span> <span class="ne">NotImplementedError</span><span class="p">(</span><span class="sa">f</span><span class="s2">&quot;`</span><span class="si">{</span><span class="bp">self</span><span class="o">.</span><span class="n">envelope_type</span><span class="si">}</span><span class="s2">` envelope type&quot;</span>
                                           <span class="s2">&quot;is not supported&quot;</span><span class="p">)</span></div>
