--- a/genindex.html
+++ b/genindex.html
@@ -687,10 +687,12 @@
 </li>
         <li><a href="autoapi/quvac/plotting/index.html#quvac.plotting.plot_mollweide">plot_mollweide() (in module quvac.plotting)</a>
 </li>
-        <li><a href="autoapi/quvac/simulation/index.html#quvac.simulation.postprocess_simulation">postprocess_simulation() (in module quvac.simulation)</a>
+        <li><a href="autoapi/quvac/plotting/index.html#quvac.plotting.plot_roi">plot_roi() (in module quvac.plotting)</a>
 </li>
     </ul></td>
     <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="autoapi/quvac/simulation/index.html#quvac.simulation.postprocess_simulation">postprocess_simulation() (in module quvac.simulation)</a>
+</li>
         <li><a href="autoapi/quvac/field/external_field/index.html#quvac.field.external_field.ProbePumpField.probe_field">probe_field (quvac.field.external_field.ProbePumpField attribute)</a>
 </li>
         <li><a href="autoapi/quvac/field/external_field/index.html#quvac.field.external_field.ProbePumpField.probe_pump_idx">probe_pump_idx (quvac.field.external_field.ProbePumpField attribute)</a>
@@ -911,6 +913,8 @@
         <li><a href="autoapi/quvac/field/external_field/index.html#quvac.field.external_field.ExternalField.setup_field">setup_field() (quvac.field.external_field.ExternalField method)</a>
 </li>
         <li><a href="autoapi/quvac/grid/index.html#quvac.grid.setup_grids">setup_grids() (in module quvac.grid)</a>
+</li>
+        <li><a href="autoapi/quvac/postprocess/index.html#quvac.postprocess.signal_in_detector">signal_in_detector() (in module quvac.postprocess)</a>
 </li>
         <li><a href="autoapi/quvac/field/index.html#quvac.field.SPATIAL_MODEL_FIELDS">SPATIAL_MODEL_FIELDS (in module quvac.field)</a>
 </li>
