--- a/_modules/quvac/field/abc.html
+++ b/_modules/quvac/field/abc.html
@@ -285,7 +285,7 @@
 <span class="kn">from</span><span class="w"> </span><span class="nn">scipy.spatial.transform</span><span class="w"> </span><span class="kn">import</span> <span class="n">Rotation</span>
 <span class="kn">import</span><span class="w"> </span><span class="nn">pyfftw</span>
 
-<span class="kn">from</span><span class="w"> </span><span class="nn">quvac.field.utils</span><span class="w"> </span><span class="kn">import</span> <span class="n">get_field_energy_kspace</span>
+<span class="kn">from</span><span class="w"> </span><span class="nn">quvac.field.utils</span><span class="w"> </span><span class="kn">import</span> <span class="n">get_field_energy</span><span class="p">,</span> <span class="n">get_field_energy_kspace</span>
 <span class="kn">from</span><span class="w"> </span><span class="nn">quvac</span><span class="w"> </span><span class="kn">import</span> <span class="n">config</span>
 
 <span class="n">ANGLE_KEYS</span> <span class="o">=</span> <span class="s2">&quot;theta phi beta phase0&quot;</span><span class="o">.</span><span class="n">split</span><span class="p">()</span>
@@ -328,6 +328,18 @@
             <span class="k">if</span> <span class="n">key</span> <span class="ow">in</span> <span class="n">ANGLE_KEYS</span><span class="p">:</span>
                 <span class="n">val</span> <span class="o">*=</span> <span class="n">pi</span> <span class="o">/</span> <span class="mf">180.0</span>
             <span class="nb">setattr</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">key</span><span class="p">,</span> <span class="n">val</span><span class="p">)</span>
+    
+    <span class="k">def</span><span class="w"> </span><span class="nf">_check_energy</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
+<span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
+<span class="sd">        Check and adjust the field energy.</span>
+<span class="sd">        &quot;&quot;&quot;</span>
+        <span class="n">E</span><span class="p">,</span> <span class="n">B</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">calculate_field</span><span class="p">(</span><span class="n">t</span><span class="o">=</span><span class="mi">0</span><span class="p">)</span>
+        <span class="n">W</span> <span class="o">=</span> <span class="n">get_field_energy</span><span class="p">(</span><span class="n">E</span><span class="p">,</span> <span class="n">B</span><span class="p">,</span> <span class="bp">self</span><span class="o">.</span><span class="n">dV</span><span class="p">)</span>
+
+        <span class="bp">self</span><span class="o">.</span><span class="n">modify_energy</span> <span class="o">=</span> <span class="s2">&quot;W&quot;</span> <span class="ow">in</span> <span class="bp">self</span><span class="o">.</span><span class="vm">__dict__</span><span class="o">.</span><span class="n">keys</span><span class="p">()</span> <span class="ow">and</span> <span class="ow">not</span> <span class="n">np</span><span class="o">.</span><span class="n">isclose</span><span class="p">(</span><span class="n">W</span><span class="p">,</span> <span class="bp">self</span><span class="o">.</span><span class="n">W</span><span class="p">,</span> <span class="n">rtol</span><span class="o">=</span><span class="mf">1e-5</span><span class="p">)</span>
+        <span class="k">if</span> <span class="bp">self</span><span class="o">.</span><span class="n">modify_energy</span><span class="p">:</span>
+            <span class="bp">self</span><span class="o">.</span><span class="n">W_correction</span> <span class="o">=</span> <span class="n">np</span><span class="o">.</span><span class="n">sqrt</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">W</span> <span class="o">/</span> <span class="n">W</span><span class="p">)</span> <span class="k">if</span> <span class="n">W</span> <span class="o">&gt;</span> <span class="mi">0</span> <span class="k">else</span> <span class="mi">0</span>
+            <span class="bp">self</span><span class="o">.</span><span class="n">W_num</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">W</span>
     
 <div class="viewcode-block" id="Field.get_rotation">
 <a class="viewcode-back" href="../../../autoapi/quvac/field/abc/index.html#quvac.field.abc.Field.get_rotation">[docs]</a>
