--- a/genindex.html
+++ b/genindex.html
@@ -681,6 +681,8 @@
   <h2>P</h2>
   <table style="width: 100%" class="indextable genindextable"><tr>
     <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="autoapi/quvac/simulation/index.html#quvac.simulation.parse_args">parse_args() (in module quvac.simulation)</a>
+</li>
         <li><a href="autoapi/quvac/plotting/index.html#quvac.plotting.pi_formatter">pi_formatter() (in module quvac.plotting)</a>
 </li>
         <li><a href="autoapi/quvac/plotting/index.html#quvac.plotting.plot_fields">plot_fields() (in module quvac.plotting)</a>
@@ -881,6 +883,8 @@
         <li><a href="autoapi/quvac/field/abc/index.html#quvac.field.abc.Field.rotation_bwd_m">rotation_bwd_m (quvac.field.abc.Field attribute)</a>
 </li>
         <li><a href="autoapi/quvac/field/abc/index.html#quvac.field.abc.Field.rotation_m">rotation_m (quvac.field.abc.Field attribute)</a>
+</li>
+        <li><a href="autoapi/quvac/utils/index.html#quvac.utils.round_to_n">round_to_n() (in module quvac.utils)</a>
 </li>
         <li><a href="autoapi/quvac/simulation/index.html#quvac.simulation.run_simulation">run_simulation() (in module quvac.simulation)</a>
 </li>
