--- a/_modules/quvac/utils.html
+++ b/_modules/quvac/utils.html
@@ -509,6 +509,13 @@
 
     <span class="k">return</span> <span class="n">classes</span></div>
 
+
+
+<div class="viewcode-block" id="round_to_n">
+<a class="viewcode-back" href="../../autoapi/quvac/utils/index.html#quvac.utils.round_to_n">[docs]</a>
+<span class="k">def</span><span class="w"> </span><span class="nf">round_to_n</span><span class="p">(</span><span class="n">x</span><span class="p">,</span> <span class="n">n</span><span class="p">):</span>
+    <span class="k">return</span> <span class="nb">round</span><span class="p">(</span><span class="n">x</span><span class="p">,</span> <span class="o">-</span><span class="nb">int</span><span class="p">(</span><span class="n">np</span><span class="o">.</span><span class="n">floor</span><span class="p">(</span><span class="n">np</span><span class="o">.</span><span class="n">sign</span><span class="p">(</span><span class="n">x</span><span class="p">)</span> <span class="o">*</span> <span class="n">np</span><span class="o">.</span><span class="n">log10</span><span class="p">(</span><span class="nb">abs</span><span class="p">(</span><span class="n">x</span><span class="p">))))</span> <span class="o">+</span> <span class="n">n</span><span class="p">)</span></div>
+
 </pre></div>
         </article>
       </div>
