--- a/genindex.html
+++ b/genindex.html
@@ -514,11 +514,13 @@
 </li>
         <li><a href="autoapi/quvac/log/index.html#quvac.log.get_performance_stats">get_performance_stats() (in module quvac.log)</a>
 </li>
-    </ul></td>
-    <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="autoapi/quvac/postprocess/index.html#quvac.postprocess.VacuumEmissionAnalyzer.get_perp_signal">get_perp_signal() (quvac.postprocess.VacuumEmissionAnalyzer method)</a>
 </li>
+    </ul></td>
+    <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="autoapi/quvac/postprocess/index.html#quvac.postprocess.VacuumEmissionAnalyzer.get_photon_spectrum_from_a12">get_photon_spectrum_from_a12() (quvac.postprocess.VacuumEmissionAnalyzer method)</a>
+</li>
+        <li><a href="autoapi/quvac/field/gaussian/index.html#quvac.field.gaussian.GaussianAnalytic.get_plane_wave_phase">get_plane_wave_phase() (quvac.field.gaussian.GaussianAnalytic method)</a>
 </li>
         <li><a href="autoapi/quvac/grid/index.html#quvac.grid.get_pol_basis">get_pol_basis() (in module quvac.grid)</a>
 </li>
